--- a/views/partcreate.pug
+++ b/views/partcreate.pug
@@ -6,7 +6,7 @@ block content
   form(id='PartForm', action="/resource/parts", method="POST")
     div.form-group
         label.partLabel(for='partname') Part Name
-        input#partname(type='text', name='name')
+        input#partname(type='text', name='part_name')
     div.form-group
         label.partLabel(for='size') Part Cost
         input#size(type='number', name='size')
