--- a/views/register.pug
+++ b/views/register.pug
@@ -4,7 +4,7 @@ block content
  h1= title
  h2= message
  br
- form(role='form', action="/login", method="post", style='max-width: 300px;')
+ form(role='form', action="/register",method="post", style='max-width: 300px;')
   .form-group
    input.form-control(type='text', name="username", placeholder='Enter Username')
   .form-group
