--- a/views/partcreate.pug
+++ b/views/partcreate.pug
@@ -8,10 +8,10 @@ block content
         label.partLabel(for='partname') Part Name
         input#partname(type='text', name='part_name')
     div.form-group
-        label.partLabel(for='size') Part Cost
-        input#size(type='number', name='size')
+        label.partLabel(for='size') Part Size
+        input#size(type='text', name='size')
     div.form-group
-        label.partLabel(for='cost') Part Weight
+        label.partLabel(for='cost') Part Cost
         input#cost(type='number', name='cost')
     input.button(type="submit")
 
