--- a/views/partupdate.pug
+++ b/views/partupdate.pug
@@ -19,10 +19,10 @@ block content
           label.partAttr(for='partname') Part Name
           input.partsInput#partname(type='text', name='Name', value= Name )
       div.form-group
-          label.partAttr(for='size') Part Cost
+          label.partAttr(for='size') Part Size
           input.partsInput#size(type='number', name='size', value= Size )
       div.form-group
-          label.partAttr(for='cost') Part Weight
+          label.partAttr(for='cost') Part Cost
           input.partsInput#cost(type='number', name='cost', value= Cost )
       button(class="btn btn-primary m-2") Update
 
